# IntentNetAgent

./: CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
demo/: demo.cast  record_demo.py
intent_net_agent/: __init__.py  demo.py  demo_llm.py
intent_net_agent/schemas/: network_entities.py
intent_net_agent/tools/: apply_pci_compliance.py  configure_firewall.py  create_vlan.py  setup_encryption.py  verify_connectivity.py
