[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "intent-net-agent"
version = "0.1.0"
description = "Intent-Based Networking Agent for SMBs — demo built on ScalableAgents"
requires-python = ">=3.11"
dependencies = [
    "scalable-agents @ file://../ScalableAgents",
    "langchain-core>=0.3",
    "langgraph>=0.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["intent_net_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
